--- a/client/src/assets/scss/Employees/EmployeesRegistration.scss
+++ b/client/src/assets/scss/Employees/EmployeesRegistration.scss
@@ -11,20 +11,19 @@
     .EmployeesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 95vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .EmployeesRegistration_data_content{
             display: flex;
             flex-direction: column;
-            width: 80%;
+            width: 100%;
             margin: 10px 30px 10px 30px;
             border: 1px solid #fff;
             border-radius: 5px;
             background-color: #fff;
-
             .EmployeesRegistration_top_body_cont{
                 margin: 4rem 0 0 0;
                 background-color: #fff;
@@ -42,13 +41,14 @@
                     height: 55vh;
                 }
                 .EmployeeRegistration_mid{
+                    margin: 20px 50px;          
                     background-color: #EFEDEA;
                     overflow-y: auto;
                     overflow-x: hidden;
                     scrollbar-width: thin; 
                     scrollbar-color: transparent transparent;
                     border-radius: 5px;
-                    padding: 0 0 20px 0;
+                    // padding: 0 0 20px 0;
                     &:hover {
                         scrollbar-color: #888 #EFEDEA; 
                     }
@@ -70,17 +70,18 @@
                     }    
                 }
                 .EmployeesRegistration_mid_form_cont{
-                    margin: -14px 50px;
+                    // margin: 20px 50px;          
+
                     
                     .EmployeesRegistration_form-content.EmployeesRegistration_ForImplementationOfPlusAndMinus{
-                        padding: 50px 0px 0px 20px;
+                        padding: 0px 0px 10px 0px;
                     }
                     .EmployeesRegistration_form-content.EmployeesRegistration_ForImplementationOfHorizontalLineBelow{
                         border-top: 4px solid rgb(183, 183, 183);
                         opacity: 30%;
                     }
                     .EmployeesRegistration_form-content{
-                        padding: 15px 80px 0px 20px;
+                        padding: 3px 20px 10px 20px;
 
                         .EmployeesRegistration_form-div{
                             display: flex;
@@ -184,13 +185,8 @@
                     }
                 }
                 .EmployeesRegistration_lower_form_cont{
-                    justify-content: space-between;
-                    align-items: center; 
-                    padding: 20px;
-                    // background-color: #fff;
-                    // background-color: #808080;
-                    bottom: 50px;
                     .EmployeesRegistration_form-btn-content{
+                        padding: 20px;
                         .EmployeesRegistration_plus-btn{
                             padding: 20px 10px 20px 10px;
                             gap: 1rem;
