--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
@@ -4,12 +4,12 @@
         display: flex;
         background-color: #EFEDEA;
         width: 100vw;
-        height: 130vh;
+        // height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .BusinessDivisionsListAndEdit_maincontent_wrapper{
-            width: 84%;
+            width: 102.5%; // I chaned this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .BusinessDivisionsListAndEdit_top_content{
                 border: 1px solid #fff;
@@ -38,7 +38,7 @@
                     color: white;
                 }
                 .BusinessDivisionsListAndEdit_mid_body_cont{
-                    height: 118vh;
+                    height: 85vh;
                     .ListButtons_btn{
                         margin-left: -44px;
                     }
@@ -51,7 +51,7 @@
                     scrollbar-width: thin;
                     scrollbar-color: #888 #e0e0e0;
                     @media only screen and (min-width: 1920px){
-                        height: 45vh;
+                        height: 65vh;
                     }
                     &::-webkit-scrollbar {
                         width: 8px;
