--- a/client/src/assets/scss/Clients/ClientsRegistration.scss
+++ b/client/src/assets/scss/Clients/ClientsRegistration.scss
@@ -73,6 +73,7 @@
                         }
                         .ClientsRegistration_ForImplementationOfHorizontalLineBelow{
                             // border-top: 4px solid rgb(183, 183, 183);
+                            // opacity: 30%;
                         }
                         .ClientsRegistration_form-div{
                             padding: 15px 0px 0px 20px;
@@ -95,10 +96,7 @@
                     }
                 }
                 .ClientsRegistration_lower_form_cont{
-                    // justify-content: space-between;
-                    // align-items: center; 
                     padding: 20px;
-                    // bottom: 50px;
                     .ClientsRegistration_form-content{
                         .ClientsRegistration_plus-btn{
                             padding: 20px 10px 20px 10px;
