--- a/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
+++ b/client/src/assets/scss/CostOfSales/CostOfSalesRegistration.scss
@@ -3,65 +3,79 @@
     flex-direction: column;
     .RegistrationButtons_title_container{
         padding: 54.5px 70px 50px 70px !important;
+          @media only screen and (min-width: 1920px){
+            padding: 59.5px 70px 50px 70px !important;
+        }
     }
     .costOfSalesRegistration_content_wrapper{
         display: flex;
         background-color: #EFEDEA;
         width: 100vw;
-        height: 130vh;
+        height: 95vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .costOfSalesRegistration_data_content{
-            width: 80%;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
             margin: 10px 30px 10px 30px;
             border: 1px solid #fff;
             border-radius: 5px;
             background-color: #fff;
             .costOfSalesRegistration_top_body_cont{
+                margin: 4rem 0 0 0;
                 background-color: #fff;
-                height: 4rem;
+            }
+            .costOfSalesRegistration_inputs_and_buttons{
+                display: flex;
+                height: 70vh;
+                justify-content: space-between;
+                flex-direction: column;
             }
             .costOfSalesRegistration_mid_body_cont{
                 background-color: #fff;
-                max-height: 670px;
-                overflow-y: auto; 
-                overflow-x: hidden;
-                scrollbar-width: thin; 
-                scrollbar-color: transparent transparent;
+                height: 90%;
                 @media only screen and (min-width: 1875px){
                     height: 55vh;
                 }
-                &:hover {
-                    scrollbar-color: #888 #EFEDEA; 
-                }
-                &::-webkit-scrollbar {
-                    width: 8px;
-                }
-                &::-webkit-scrollbar-track {
-                    background: transparent; 
-                }
-                &::-webkit-scrollbar-thumb {
-                    background-color: transparent; 
-                    border-radius: 10px;
-                }
-                &:hover::-webkit-scrollbar-thumb {
-                    background-color: #888;
-                }
-                &:hover::-webkit-scrollbar-thumb:hover {
-                    background-color: #555; 
-                }
                 .costOfSalesRegistration_mid_form_cont{
-                    margin: -20px 50px;
+                    margin: 20px 50px;
+                    background-color: #EFEDEA;
+                    overflow-y: auto; 
+                    overflow-x: hidden;
+                    scrollbar-width: thin; 
+                    scrollbar-color: transparent transparent;
+                    border-radius: 5px;
+                    &:hover {
+                        scrollbar-color: #888 #EFEDEA; 
+                    }
+                    &::-webkit-scrollbar {
+                        width: 8px;
+                    }
+                    &::-webkit-scrollbar-track {
+                        background: transparent; 
+                    }
+                    &::-webkit-scrollbar-thumb {
+                        background-color: transparent; 
+                        border-radius: 10px;
+                    }
+                    &:hover::-webkit-scrollbar-thumb {
+                        background-color: #888;
+                    }
+                    &:hover::-webkit-scrollbar-thumb:hover {
+                        background-color: #555; 
+                    }
                     .costOfSalesRegistration_form-content.costOfSalesRegistration_form-content-special{
-                        padding: 50px 0px 0px 20px;
+                         padding: 20px 10px 0px 20px;
                         }
                         .costOfSalesRegistration_form-content.costOfSalesRegistration_form-line{
                             border-top: 4px solid rgb(183, 183, 183);
+                            margin: 0px 110px 0px 0px;
                             opacity: 30%;
                         }
                         .costOfSalesRegistration_form-content{
-                            padding: 15px 0px 0px 20px;
+                            padding: 3px 20px 10px 20px;
                             .costOfSalesRegistration_form-content-div{
                                 display: flex;
                                 .costOfSalesRegistration_calc{
@@ -207,33 +221,36 @@
                                 }
                             }
                         }
-                        .costOfSalesRegistration_form-content{
-                            .costOfSalesRegistration_plus-btn{
-                                padding: 20px 10px 20px 10px;
-                                gap: 1rem;
-                                display: flex;
-                                margin-left: 90%;
-                                .costOfSalesRegistration_inc,
-                                .costOfSalesRegistration_dec{
-                                    background-color: #808080;
-                                    color: whitesmoke;
-                                    width: 30px;
-                                    height: 40px;
-                                    font-size: 25px;
-                                    border-radius: 5px;
-                                }
-                            }
-                            .costOfSalesRegistration_options-btn{
-                                display: flex;
-                                gap: 1%;
-                                padding: 10px 10px 10px 10px;
-                                align-items: center;
-                                justify-content: center;
-                                button{
-                                    width: 10%;
-                                }
-                            }
+                    }
+                }
+                .costOfSalesRegistration_lower_form_cont{
+                    padding: 20px;
+                .costOfSalesRegistration_form-content{
+                    .costOfSalesRegistration_plus-btn{
+                        padding: 20px 10px 20px 10px;
+                        gap: 1rem;
+                        display: flex;
+                        margin-left: 90%;
+                        .costOfSalesRegistration_inc,
+                        .costOfSalesRegistration_dec{
+                            background-color: #808080;
+                            color: whitesmoke;
+                            width: 30px;
+                            height: 40px;
+                            font-size: 25px;
+                            border-radius: 5px;
                         }
+                    }
+                    .costOfSalesRegistration_options-btn{
+                        display: flex;
+                        gap: 1%;
+                        padding: 10px 10px 10px 10px;
+                        align-items: center;
+                        justify-content: center;
+                        button{
+                            width: 10%;
+                        }
+                    }
                 }
             }
         }
