--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -4,12 +4,11 @@
         display: flex;
         background-color: #EFEDEA;
         width: 100vw; 
-        height: 130vh;
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
         .expensesList_btn_cont_wrapper{
-            width: 84%;
+            width: 102.5%; // I chaned this so it would align with registration screens and also give more space for list columns.
             padding: 10px 30px 10px 30px;
             .expensesList_top_content{
                 border: 1px solid #fff;
@@ -38,7 +37,7 @@
                     color: white;
                 }
                 .expensesList_mid_body_cont{
-                    height: 118vh;
+                    height: 85vh;
                     .ListButtons_btn{
                         margin-left: 10px;
                     }
@@ -50,7 +49,7 @@
                         scrollbar-width: thin;
                         scrollbar-color: #888 #e0e0e0;
                         @media only screen and (min-width: 1920px){
-                            height: 85vh;
+                            height: 65vh;
                         }
                         &::-webkit-scrollbar {
                             width: 8px;
