fixed issue with projects edit screen

--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -3,7 +3,7 @@
     .projectsList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw; 
+        // width: 100vw; 
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
@@ -11,33 +11,40 @@
             width: 102.5%; // I chaned this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .projectsList_top_content{
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                width: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
-                background-color: #fff;
                 .projectsList_top_body_cont{
                     background-color: #fff;
                     height: 4rem;
                 }
                 button.projectsList_mode_switch {
+                    position: absolute;
+                    right: 70px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
                     font-weight: 500;
-                    background-color: #f3f3f3;
+                    background-color: #f3f3f38b;
                 }
                 .projectsList_mode_switch_datalist{
+                    // position: absolute;
                     float: right;
                     padding: 40px 70px;
                 }
                 button.projectsList_edit_submit_btn {
-                    border: 2px solid #fdd7b3;
+                    // border: 2px solid #fdd7b3;
                     padding: 2px 13px;
                     border-radius: 7px;
                     margin-top: 6px;
-                    background: #2e2eff;
-                    color: white;
+                    background: #66d1ff;
+                    // color: white;
                 }
                 .projectsList_mid_body_cont{
+                    background-color: #fff;
                     height: 85vh;
                     .ListButtons_btn{
                         margin-left: 10px;
@@ -92,6 +99,7 @@
                                 }
                                 .projectsList_table_body{
                                     .projectsList_table_body_content_horizontal{
+                                        
                                         border: none;
                                         &:nth-child(odd){
                                             background-color: #f9f9f9;
@@ -112,17 +120,42 @@
                             }
                         }
                     }
-                    .projectsList_is_editing_wrapper{
+                    .projectsList_table_wrapper.editMode {
+                        display: flex;
                         // margin-top: 220px;
-                        .projectsList_is_editing_cont{
+                        padding: 0px 40px 0px 0px;
+                        // justify-content: flex-start;
+                        // width: 80%; // Adjusted to 80% for edit mode
+                    }
+                    .projectsList_edit_submit_btn_cont{
+                        display: flex;
+                        justify-content: center;
+                        position: absolute;
+                        bottom: 3px;
+                        right: 3px;
+                        // float: right;
+                        // padding: 0px 120px 200px 120px; 
+                        .projectsList_edit_submit_btn{
+                            
                             display: flex;
-                            justify-content: flex-end;
-                            padding: 20px 20px 0px 20px;
-                            margin: 0px !important;
+                            justify-content: center;
+                            align-items: center;
+                            gap: 1%;
+                            padding: 5px 20px 5px 20px;
+                        }
+                    }
+                    .projectsList_is_editing_wrapper{
+                        .projectsList_is_editing_cont{                            
+                            // display: flex;
+                            // justify-content: flex-end;
+                            // margin: 0px !important;
                         }
                     }
                 }
             }
+        }
+        .projectsList_wrapper.editMode{
+        width: 84%; // Adjusted to 84% for edit mode
         }
     }
 }
