--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -9,42 +9,60 @@
             flex-direction: column;
         }
         .EmployeesListAndEdit_maincontent_wrapper{
-            width: 102.5%; // I chaned this so it would align with registration screens
+            width: 84%; // I chaned this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .EmployeesListAndEdit_top_content{
+                position: relative;
+                display: flex;
+                background-color: #fff;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
-                background-color: #fff;
                 .EmployeesListAndEdit_top_body_cont{
                     background-color: #fff;
                     height: 4rem;
                 }
                 button.EmployeesListAndEdit_mode_switch{
+                    position: absolute;
+                    right: 70px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
                     font-weight: 500;
-                    background-color: #f3f3f3;
+                    background-color: #f3f3f38b;
                 }
                 .EmployeesListAndEdit_mode_switch_datalist{
                     float: right;
                     padding: 40px 70px;
                 }
-                button.EmployeesListAndEdit_edit_submit_btn {
-                    border: 2px solid #fdd7b3;
-                    padding: 2px 13px;
-                    border-radius: 7px;
-                    background: #2e2eff;
-                    color: white;
+                .EmployeesList_edit_submit_btn_cont{
+                    display: flex;
+                    justify-content: center;
+                    position: absolute;
+                    bottom: 2%;
+                    right:  2.5%;
+                    button.EmployeesListAndEdit_edit_submit_btn {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 1%;
+                        padding: 5px 20px 5px 20px;
+                        border-radius: 7px;
+                        margin-top: 6px;
+                        background: #66d1ff;
+                    }
                 }
                 .EmployeesListAndEdit_mid_body_cont{
-                    height: 85vh;
+                    height: 70vh;
                     .ListButtons_btn{
                         margin-left: -8px;
                     }
                 }
                 .EmployeesListAndEdit_table_wrapper{
-                    width: 100%;
+                    padding: 0px 10px 0px 20px;
+                    width: 102.5%;
                     height: 80%;
                     overflow-y: auto; 
                     overflow-x: hidden;
@@ -72,8 +90,13 @@
                         }
                         scrollbar-width: none; 
                     }
+                    .EmployeesListAndEdit_table_cont.editScrollable {
+                            overflow-x: auto;
+                            padding: 0px 0px 0px 0px;
+
+                        }
                     .EmployeesListAndEdit_table_cont{
-                        padding: 0px 0px 0px 70px;
+                        // padding: 0px 0px 0px 70px;
                         table{
                             width: 97%;
                             .EmployeesListAndEdit_table_title{
@@ -116,14 +139,19 @@
                         }
                     }
                 }
-                .EmployeesListAndEdit_is_editing_wrapper{
-                    .EmployeesListAndEdit_is_editing_cont{
-                        display: flex;
-                        justify-content: flex-end;
-                        padding: 20px 20px 0px 20px;
-                        margin: 0px !important;
-                    }
+                .EmployeesListAndEdit_table_wrapper.editMode{
+                    width: 100% !important; // Adjusted to 84% for edit mode        
+                    // background-color: #e61717 !important;
+                    padding: 0px 16px 0px 20px !important;
                 }
+                // .EmployeesListAndEdit_is_editing_wrapper{
+                //     .EmployeesListAndEdit_is_editing_cont{
+                //         display: flex;
+                //         justify-content: flex-end;
+                //         padding: 20px 20px 0px 20px;
+                //         margin: 0px !important;
+                //     }
+                // }
             }
         }
     }
