--- a/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
+++ b/client/src/assets/scss/Expenses/ExpensesListAndEdit.scss
@@ -3,47 +3,52 @@
     .expensesList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        width: 100vw; 
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
-        .expensesList_btn_cont_wrapper{
-            width: 102.5%; // I chaned this so it would align with registration screens and also give more space for list columns.
+        .expensesList_wrapper{
+            width: 84%; // I chaned this so it would align I am not sure why it needs to be different.
             padding: 10px 30px 10px 30px;
+        // .expensesList_btn_cont_wrapper{
+        //     width: 102.5%; // I chaned this so it would align with registration screens and also give more space for list columns.
+        //     padding: 10px 30px 10px 30px;
             .expensesList_top_content{
+                position: relative;
+                display: flex;
+                background-color: #fff;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
-                background-color: #fff;
                 .expensesList_top_body_cont{
                     background-color: #fff;
                     height: 4rem;
                 }
                 button.expensesList_mode_switch{
+                    position: absolute;
+                    right: 70px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
                     font-weight: 500;
-                    background-color: #f3f3f3;
+                    background-color: #f3f3f38b;
                 }
                 .expensesList_mode_switch_datalist{
                     float: right;
                     padding: 40px 70px;
                 }
-                button.expensesList_edit_submit_btn {
-                    border: 2px solid #fdd7b3;
-                    padding: 2px 13px;
-                    border-radius: 7px;
-                    background: #2e2eff;
-                    color: white;
-                }
                 .expensesList_mid_body_cont{
-                    height: 85vh;
+                    height: 70vh;
+                    background-color: #fff;
+                    
                     .ListButtons_btn{
                         margin-left: 10px;
                     }
                     .expensesList_table_wrapper{
-                        width: 100%;
-                        height: 80vh;
+                        padding: 0px 10px 0px 20px;
+                        width: 102.5%;
+                        height: 80%;
                         overflow-y: auto; 
                         overflow-x: hidden;
                         scrollbar-width: thin;
@@ -70,8 +75,13 @@
                             }
                             scrollbar-width: none; 
                         }
+                        .expensesList_table_cont.editScrollable {
+                            overflow-x: auto;
+                            padding: 0px 0px 0px 0px;
+
+                        }
                         .expensesList_table_cont{
-                            padding: 0px 0px 0px 70px;
+                            // padding: -20px 10px -20px 0px;
                             table{
                                 width: 97%;
                                 .expensesList_table_title{
@@ -125,18 +135,40 @@
                                     }
                                 }
                             }
-                        }
-                    }
-                    .expensesList_pagination_wrapper{
-                        .expensesList_pagination_cont{
-                            display: flex;
-                            justify-content: flex-end;
-                            padding: 20px 20px 0px 20px;
-                            margin: 0px !important;
+                            .expensesList_table_wrapper.editMode {
+                                // display: flex;
+                                // margin-top: 220px;
+                                // padding: 0px 40px 0px 40px;
+                                // justify-content: flex-start;
+                                // width: 80%; // Adjusted to 80% for edit mode
+                            }
                         }
                     }
                 }
+                .expensesList_edit_submit_btn_cont{
+                    display: flex;
+                    justify-content: center;
+                    position: absolute;
+                    bottom: 2%;
+                    right:  2.5%;
+                    button.expensesList_edit_submit_btn {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 1%;
+                        padding: 5px 20px 5px 20px;
+                        // padding: 2px 13px;
+                        border-radius: 7px;
+                        margin-top: 6px;
+                        background: #66d1ff;
+                    }
+                }
             }
+        }
+        .expensesList_table_wrapper.editMode{
+            width: 100% !important; // Adjusted to 84% for edit mode        
+            // background-color: #e61717 !important;
+            padding: 0px 16px 0px 20px !important;
         }
     }
 }
