--- a/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
+++ b/client/src/assets/scss/Projects/ProjectsListAndEdit.scss
@@ -3,7 +3,6 @@
     .projectsList_cont_wrapper{
         display: flex;
         background-color: #EFEDEA;
-        // width: 100vw; 
         @media only screen and (max-width: 1000px){
             flex-direction: column;
         }
@@ -13,8 +12,10 @@
             .projectsList_top_content{
                 position: relative;
                 display: flex;
+                background-color: #fff;
                 flex-direction: column;
                 width: 100%;
+                height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
                 .projectsList_top_body_cont{
@@ -35,17 +36,17 @@
                     float: right;
                     padding: 40px 70px;
                 }
-                button.projectsList_edit_submit_btn {
+                // button.projectsList_edit_submit_btn {
                     // border: 2px solid #fdd7b3;
-                    padding: 2px 13px;
-                    border-radius: 7px;
-                    margin-top: 6px;
-                    background: #66d1ff;
+                    // padding: 2px 13px;
+                    // border-radius: 7px;
+                    // margin-top: 6px;
+                    // background: #66d1ff;
                     // color: white;
-                }
+                // }
                 .projectsList_mid_body_cont{
+                    height: 70vh;
                     background-color: #fff;
-                    height: 85vh;
                     .ListButtons_btn{
                         margin-left: 10px;
                     }
@@ -80,9 +81,13 @@
                         }
                         .projectsList_table_cont.editScrollable {
                             overflow-x: auto;
+                            padding: 0px 0px 0px 0px;
+
                         }
                         .projectsList_table_cont{
-                            padding: 0px 0px 0px 70px;
+                            // background-color: pink;
+                            padding: 0px 10px 0px 20px;
+
                             .table{
                                 width: 97%;
                                 .projectsList_table_title{
@@ -98,6 +103,7 @@
                                     }
                                 }
                                 .projectsList_table_body{
+
                                     .projectsList_table_body_content_horizontal{
                                         
                                         border: none;
@@ -123,7 +129,7 @@
                     .projectsList_table_wrapper.editMode {
                         display: flex;
                         // margin-top: 220px;
-                        padding: 0px 40px 0px 0px;
+                        padding: 0px 40px 0px 40px;
                         // justify-content: flex-start;
                         // width: 80%; // Adjusted to 80% for edit mode
                     }
@@ -131,17 +137,20 @@
                         display: flex;
                         justify-content: center;
                         position: absolute;
-                        bottom: 3px;
-                        right: 3px;
+                        bottom: 2%;
+                        right:  2.5%;
                         // float: right;
                         // padding: 0px 120px 200px 120px; 
                         .projectsList_edit_submit_btn{
-                            
                             display: flex;
                             justify-content: center;
                             align-items: center;
                             gap: 1%;
                             padding: 5px 20px 5px 20px;
+                            // padding: 2px 13px;
+                            border-radius: 7px;
+                            margin-top: 6px;
+                            background: #66d1ff;
                         }
                     }
                     .projectsList_is_editing_wrapper{
@@ -155,7 +164,7 @@
             }
         }
         .projectsList_wrapper.editMode{
-        width: 84%; // Adjusted to 84% for edit mode
+            width: 84%; // Adjusted to 84% for edit mode
         }
     }
 }
