fixed users and business list display

--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -9,7 +9,7 @@
             flex-direction: column;
         }
         .EmployeesListAndEdit_maincontent_wrapper{
-            width: 84%; // I chaned this so it would align with registration screens
+            width: 84%; // I changed this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .EmployeesListAndEdit_top_content{
                 position: relative;
@@ -96,7 +96,7 @@
 
                         }
                     .EmployeesListAndEdit_table_cont{
-                        // padding: 0px 0px 0px 70px;
+                        padding: 0px 20px 0px 20px;
                         table{
                             width: 97%;
                             .EmployeesListAndEdit_table_title{
