--- a/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
+++ b/client/src/assets/scss/BusinessDivisions/BusinessDivisionsListAndEdit.scss
@@ -12,40 +12,57 @@
             width: 102.5%; // I chaned this so it would align with registration screens
             padding: 10px 30px 10px 30px;
             .BusinessDivisionsListAndEdit_top_content{
+                position: relative;
+                display: flex;
+                background-color: #fff;
+                flex-direction: column;
+                width: 100%;
+                height: 100%;
                 border: 1px solid #fff;
                 border-radius: 5px;
-                background-color: #fff;
                 .BusinessDivisionsListAndEdit_top_body_cont{
                     background-color: #fff;
                     height: 4rem;
                 }
                 button.BusinessDivisionsListAndEdit_mode_switch{
+                    position: absolute;
+                    right: 70px;
                     border: 1px solid;
                     padding: 3px 21px;
                     border-radius: 5px;
                     font-weight: 500;
-                    background-color: #f3f3f3;
+                    background-color: #f3f3f38b;
                 }
                 .BusinessDivisionsListAndEdit_mode_switch_datalist{
                     float: right;
                     padding: 40px 70px;
                 }
+                .BusinessDivisionsListAndEdit_edit_submit_btn_cont{
+                    display: flex;
+                    justify-content: center;
+                    position: absolute;
+                    bottom: 2%;
+                    right:  2.5%;
+                }
                 button.BusinessDivisionsListAndEdit_edit_submit_btn {
-                    border: 2px solid #fdd7b3;
-                    padding: 2px 13px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 1%;
+                    padding: 5px 20px 5px 20px;
                     border-radius: 7px;
-                    background: #2e2eff;
-                    color: white;
+                    margin-top: 6px;
+                    background: #66d1ff;
                 }
                 .BusinessDivisionsListAndEdit_mid_body_cont{
-                    height: 85vh;
+                    height: 70vh;
                     .ListButtons_btn{
                         margin-left: -44px;
                     }
                 }
                 .BusinessDivisionsListAndEdit_table_wrapper{
                     width: 100%;
-                    height: 80vh;
+                    height: 80%;
                     overflow-y: auto; 
                     overflow-x: hidden;
                     scrollbar-width: thin;
@@ -73,7 +90,7 @@
                         scrollbar-width: none; 
                     }
                     .BusinessDivisionsListAndEdit_table_cont{
-                        padding: 0px 0px 0px 70px;
+                        padding: 0px 0px 0px 40px;
                         table{
                             width: 97%;
                             .BusinessDivisionsListAndEdit_table_title{
